db succes adding

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,8 @@ default: &default
 development:
   <<: *default
   database: cheese_development
+  user: <%= ENV.fetch("CheeseUser") %>
+  password: <%= ENV.fetch("MyFavoritePass") %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +59,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: cheese_test
+  database: cheese_test  
+  user: <%= ENV.fetch("CheeseUser") %>
+  password: <%= ENV.fetch("MyFavoritePass") %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
